# glyph-arts

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  progress.txt  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  notify-linear-on-ci-failure.yml
cli_charts/: __init__.py  __main__.py  chart.py  dashboard.py
cli_charts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli_charts/textures/: __init__.py  block.py  braille.py  hatch.py  shade.py
cli_charts/themes/: __init__.py  claude.py  linear.py  tesla.py  vercel.py
demo/: demo.tape  make_gif.py
docs/themes/: README.md  generate_gallery.py
scripts/: chart.py  dashboard.py
tests/: test_animation.py  test_confusion.py  test_rich_live.py  test_step_sampling.py
