[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-arts"
dynamic = ["version"]
description = "Terminal-visible chart toolkit -- 29 chart types (incl. image/video via chafa+ffmpeg) + live animation rendered directly in the CLI, no browser, no files."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["cli", "charts", "terminal", "visualization", "ascii", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]
dependencies = [
    "plotext>=5.2",
    "rich>=13.0",
    "phart>=0.4",
    "networkx>=3.0",
    "sparklines>=0.4",
    "pandas>=2.0",
    "duckdb>=0.10",
    "pyfiglet>=0.8",
    "uniplot>=0.5",
]

[project.optional-dependencies]
braille = ["drawille>=0.2"]
lttb    = ["lttb>=0.3"]
tui     = ["textual>=0.50"]
all     = ["drawille>=0.2", "lttb>=0.3", "textual>=0.50"]

[project.scripts]
glyph-arts = "cli_charts.chart:main"

[project.urls]
Homepage = "https://github.com/2233admin/glyph-arts"
Repository = "https://github.com/2233admin/glyph-arts"
Changelog = "https://github.com/2233admin/glyph-arts/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["cli_charts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require a real TTY or subprocess (deselect with '-m \"not slow\"')",
]
